update fix the img border gap

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ header {
 }
 
 img {
+  background-color: red;
   border: 5px solid white;
   border-radius: 50%;
   position: relative;
@@ -62,6 +63,7 @@ img {
   bottom: 0;
   transform: translate(-50%, 50%);
   margin-top: 25px;
+  display: block;
 }
 
 .hero {
